# MQSS-Pennylane-Adapter

./: .gitignore  .pre-commit-config.yaml  README.md  dummy.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish-docs.yml  publish.yml
docs/: CHANGELOG.md  contact.md  index.md
docs/api/: MQPJob.md  MQSSPennylaneBackend.md  MQSSPennylaneDevice.md
docs/css/: extra.css
docs/user_guide/: development_guide.md  getting_started.md
src/: test_backend.py
src/mqp/pennylane_provider/: backend.py  device.py  provider.py  utils.py
src/mqss/pennylane_adapter/: adapter.py  backend.py  device.py
test/: config.py  conftest.py  example.qasm  mocks.py  pennylane_adapter_tests_base.py  test_backend.py  test_backend_live.py
